--- a/collab-studio/Cargo.toml
+++ b/collab-studio/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "collaboration"
+name = "collab-studio"
 version = "0.1.0"
 authors = ["walker <warriorsfly@gmail.com>"]
 edition = "2018"
