--- a/collab-studio/Cargo.toml
+++ b/collab-studio/Cargo.toml
@@ -15,6 +15,8 @@ lazy_static = "1"
 log = "0.4"
 rand="0.8"
 serde = { version = "1", features = ["derive"] }
+serde_json =  "1"
+# tonic = "0.4"
 validator = { version = "0.12", features = ["derive"] }
 
 [dev-dependencies]
