--- a/collab-studio/Cargo.toml
+++ b/collab-studio/Cargo.toml
@@ -16,10 +16,12 @@ log = "0.4"
 rand="0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json =  "1"
-# tonic = "0.4"
+tonic = "0.4"
+prost = "0.7"
 validator = { version = "0.12", features = ["derive"] }
 
 [dev-dependencies]
 actix-rt = "2"
 env_logger = "0.8"
-futures-util = { version = "0.3.7", default-features = false }
+futures-util = { version = "0.3", default-features = false }
+tonic-build = "0.4"
