--- a/collab-studio/Cargo.toml
+++ b/collab-studio/Cargo.toml
@@ -17,11 +17,14 @@ rand="0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json =  "1"
 tonic = "0.4"
+tonic-health = "0.3"
 prost = "0.7"
 validator = { version = "0.12", features = ["derive"] }
+
+[build-dependencies]
+tonic-build = "0.4"
 
 [dev-dependencies]
 actix-rt = "2"
 env_logger = "0.8"
 futures-util = { version = "0.3", default-features = false }
-tonic-build = "0.4"
