--- a/actix-websocket-client/Cargo.toml
+++ b/actix-websocket-client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "collab"
+name = "actix-websocket-client"
 version = "0.1.0"
 authors = ["walker <warriorsfly@gmail.com>"]
 edition = "2018"
