--- a/actix-websocket/Cargo.toml
+++ b/actix-websocket/Cargo.toml
@@ -14,12 +14,13 @@ futures = "0.3"
 lazy_static = "1"
 log = "0.4"
 rand="0.8"
+redis = { version = "0.20", features = ["tokio-comp"] }
 serde = { version = "1", features = ["derive"] }
 serde_json =  "1"
 tonic = "0.4"
 tonic-health = "0.3"
 prost = "0.7"
-validator = { version = "0.12", features = ["derive"] }
+validator = { version = "0.13", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = "0.4"
