--- a/actix-dc/Cargo.toml
+++ b/actix-dc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "actix-data-center"
+name = "actix-dc"
 version = "0.1.0"
 authors = ["walker <warriorsfly@gmail.com>"]
 edition = "2018"
