--- a/actix-websocket/Cargo.toml
+++ b/actix-websocket/Cargo.toml
@@ -22,6 +22,7 @@ tonic-health = "0.3"
 prost = "0.7"
 validator = { version = "0.13", features = ["derive"] }
 
+# for tonic
 [build-dependencies]
 tonic-build = "0.4"
 
