--- a/actix-websocket/Cargo.toml
+++ b/actix-websocket/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["walker <warriorsfly@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+async-trait = "0.1"
 actix = "0.11"
 actix-web = "4.0.0-beta.4"
 actix-web-actors = "4.0.0-beta.3"
