--- a/actix-websocket-client/Cargo.toml
+++ b/actix-websocket-client/Cargo.toml
@@ -14,6 +14,9 @@ actix-web = "3"
 actix-web-actors = "3"
 actix-files = "0.5"
 awc = "2"
+base64 = "0.13"
 env_logger = "0.8"
 futures = "0.3"
 bytes = "0.5"
+serde = { version = "1", features = ["derive"] }
+serde_json =  "1"
