--- a/actix-websocket/Cargo.toml
+++ b/actix-websocket/Cargo.toml
@@ -11,13 +11,11 @@ actix-web-actors = "4.0.0-beta.4"
 dotenv = "0.15"
 envy = "0.4"
 futures = "0.3"
-futures-util = { version = "0.3", default-features = false }
 lazy_static = "1"
-log = "0.4"
-rand="0.8"
-redis = { version = "0.20", features = ["tokio-comp"] }
+rand= "0.8"
+redis = "0.20"
 serde = { version = "1", features = ["derive"] }
-serde_json =  "1"
+serde_json = "1"
 tonic = "0.4"
 tonic-health = "0.3"
 prost = "0.7"
@@ -30,3 +28,4 @@ tonic-build = "0.4"
 [dev-dependencies]
 actix-rt = "2"
 env_logger = "0.8"
+futures-util = { version = "0.3", default-features = false }
