--- a/actix-websocket/Cargo.toml
+++ b/actix-websocket/Cargo.toml
@@ -9,9 +9,11 @@ actix = "0.11"
 actix-web = "4.0.0-beta.5"
 actix-web-actors = "4.0.0-beta.4"
 dotenv = "0.15"
+env_logger = "0.8"
 envy = "0.4"
 futures = "0.3"
 lazy_static = "1"
+log = "0.4"
 rand= "0.8"
 redis = "0.20"
 serde = { version = "1", features = ["derive"] }
@@ -27,5 +29,4 @@ tonic-build = "0.4"
 
 [dev-dependencies]
 actix-rt = "2"
-env_logger = "0.8"
 futures-util = { version = "0.3", default-features = false }
