change event verb to act

--- a/actix-websocket/Cargo.toml
+++ b/actix-websocket/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 actix = "0.11"
 actix-web = "4.0.0-beta.5"
 actix-web-actors = "4.0.0-beta.4"
+
+# config and log
 dotenv = "0.15"
 env_logger = "0.8"
 envy = "0.4"
@@ -16,14 +18,18 @@ lazy_static = "1"
 log = "0.4"
 rand= "0.8"
 redis = "0.20"
+
+# for serialize
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+# for grpc
 tonic = "0.4"
 tonic-health = "0.3"
 prost = "0.7"
 validator = { version = "0.13", features = ["derive"] }
 
-# for tonic
+# for tonic,make .proto file generate .rs file
 [build-dependencies]
 tonic-build = "0.4"
 
