add docker files

--- a/actix-websocket/.env.docker
+++ b/actix-websocket/.env.docker
@@ -1,5 +1,5 @@
+REDIS_URL=redis://127.0.0.1:6379
 GRPC_URL=127.0.0.1:6379
-REDIS_URL=127.0.0.1:6379
 BACKTRACE=1
-LOG="actix_web=info,actix_server=info"
-SERVER=127.0.0.1:3000ß
+LOG="actix_web=info,actix_server=info,redis=info,tonic=info"
+SERVER=127.0.0.1:3000
