--- a/actix-websocket-client/Cargo.toml
+++ b/actix-websocket-client/Cargo.toml
@@ -7,16 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-actix = "0.10"
-actix-codec = "0.3"
-actix-web = "3"
-actix-web-actors = "3"
-actix-files = "0.5"
-awc = "2"
+actix = "0.11"
+actix-web = "4.0.0-beta.5"
+actix-web-actors = "4.0.0-beta.4"
+actix-codec = "0.4.0-beta.1"
+actix-files = "0.6.0-beta.4"
+awc = "3.0.0-beta.4"
 base64 = "0.13"
 env_logger = "0.8"
 futures = "0.3"
-bytes = "0.5"
+bytes = "1"
+tokio ="1"
 serde = { version = "1", features = ["derive"] }
 serde_json =  "1"
