--- a/actix-websocket/.env.docker
+++ b/actix-websocket/.env.docker
@@ -1,5 +1,5 @@
-REDIS_URL=redis://127.0.0.1:6379
+REDIS_URL=redis://message-stream
 GRPC_URL=127.0.0.1:6379
 BACKTRACE=1
 LOG="actix_web=info,actix_server=info,redis=info,tonic=info"
-SERVER=127.0.0.1:3000
+SERVER=0.0.0.0:3000
