rename container name

--- a/actix-websocket/.env.docker
+++ b/actix-websocket/.env.docker
@@ -1,4 +1,4 @@
-REDIS_URL=redis://message-stream
+REDIS_URL=redis://redis
 GRPC_URL=127.0.0.1:6379
 BACKTRACE=1
 LOG="actix_web=info,actix_server=info,redis=info,tonic=info"
