--- a/actix-websocket/.env
+++ b/actix-websocket/.env
@@ -1,6 +1,6 @@
 REDIS_URL=redis://127.0.0.1:6379
 GRPC_URL=127.0.0.1:6379
 BACKTRACE=1
-LOG="actix_web=info"
+LOG="actix_web=info,actix_server=info"
 @REM LOG="actix_web=info,actix_server=info,redis=info,tonic=info"
 SERVER=127.0.0.1:3000
