replace proto out to fold of workspace for  pushcenter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [workspace]
 members = [
-   "actix-dc",
+   "actix-push",
    "actix-websocket",
    # for test
-   # "actix-websocket-client",
    "actix-websocket-client",
    
 ]
