--- a/exia-push/Cargo.toml
+++ b/exia-push/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "actix-push"
+name = "exia-push"
 version = "0.1.0"
 authors = ["walker <warriorsfly@gmail.com>"]
 edition = "2018"
