--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [workspace]
 members = [
-   "actix-push",
-   "actix-websocket",
+   # 高达00 变革者
+   "innovator",
+   # 高达00 量子计算机
+   "veda",
    # for test
-   "actix-websocket-client",
+   # "actix-websocket-client",
    
 ]
