--- a/innovator/Cargo.toml
+++ b/innovator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "actix-push"
+name = "innovator"
 version = "0.1.0"
 authors = ["walker <warriorsfly@gmail.com>"]
 edition = "2018"
