--- a/veda/docker-compose.yml
+++ b/veda/docker-compose.yml
@@ -8,9 +8,9 @@ services:
   #   environment:
   #     - NGINX_HOST=walking.com
   #     - NGINX_PORT=80
-  actixwebsocket:
-    image: warriorsfly/actixwebsocket
-    container_name: actixwebsocket
+  veda:
+    image: warriorsfly/veda
+    container_name: veda
     ports:
       - "3000:3000"
     env_file:
@@ -35,5 +35,5 @@ services:
 volumes:
   redis_data:
     driver: local
-  actix_websocket_data:
+  veda_data:
     driver: local
