--- a/veda/Cargo.toml
+++ b/veda/Cargo.toml
@@ -29,6 +29,8 @@ serde_json = "1"
 tonic = "0.4"
 tonic-health = "0.3"
 prost = "0.7"
+
+tokio = "1"
 validator = { version = "0.13", features = ["derive"] }
 
 # for tonic,make .proto file generate .rs file
