--- a/innovator/Cargo.toml
+++ b/innovator/Cargo.toml
@@ -8,19 +8,35 @@ edition = "2018"
 
 [dependencies]
 
-diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"]}
+actix = "0.11"
+actix-web = "4.0.0-beta.6"
+actix-web-actors = "4.0.0-beta.4"
+
+chrono ={version = "0.4",features = ["serde"]}
 # config and log
 dotenv = "0.15"
+diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"]}
 env_logger = "0.8"
 envy = "0.4"
 futures = "0.3"
 lazy_static = "1"
+log = "0.4"
+rand= "0.8"
+
+# for serialize
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
 # for grpc
 tonic = "0.4"
 tonic-health = "0.3"
 prost = "0.7"
 
-serde = { version = "1", features = ["derive"] }
+validator = { version = "0.13", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = "0.4"
+
+[dev-dependencies]
+actix-rt = "2"
+futures-util = { version = "0.3", default-features = false }
