--- a/actix-websocket-client/Cargo.toml
+++ b/actix-websocket-client/Cargo.toml
@@ -8,15 +8,15 @@ edition = "2018"
 
 [dependencies]
 actix = "0.12"
-actix-web = "4.0.0-beta.8"
-actix-web-actors = "4.0.0-beta.6"
-actix-codec = "0.4.0-beta.1"
+actix-web = "4.0.0-beta.9"
+actix-web-actors = "4.0.0-beta.7"
+# actix-codec = "0.4.0-beta.1"
 # actix-files = "0.6.0-beta.5"
-awc = "3.0.0-beta.7"
+awc = "3.0.0-beta.8"
 base64 = "0.13"
-env_logger = "0.8"
+env_logger = "0.9"
 futures = "0.3"
 bytes = "1"
-# tokio ="1"
+tokio ="1"
 serde = { version = "1", features = ["derive"] }
 serde_json =  "1"
