--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 [dependencies]
 actix = "0.12"
-actix-web = "4.0.0-beta.16"
-actix-web-actors = "4.0.0-beta.9"
 actix-broker = "0.4.1"
-awc = "3.0.0-beta.15"
+actix-cors ="0.6.0-beta.8"
+actix-web = "4.0.0-beta.18"
+actix-web-actors = "4.0.0-beta.9"
+awc = "3.0.0-beta.17"
+
 chrono ={version = "0.4",features = ["serde"]}
 # config and log
 dotenv = "0.15"
@@ -19,8 +21,9 @@ envy = "0.4"
 futures = "0.3"
 lazy_static = "1"
 log = "0.4"
+oauth2="4"
 rand= "0.8"
-redis = { version = "0.21", features = ["tokio-native-tls-comp"] }
+redis = { version = "0.21", features = ["tokio-comp"] }
 
 # for serialize
 serde = { version = "1", features = ["derive"] }
