--- a/els/Cargo.toml
+++ b/els/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-# 高达00里面的veda,我希望后面这个可以做做人工智能
-name = "veda-websocket"
-version = "0.1.1"
-authors = ["walker <warriorsfly@gmail.com>"]
+name = "els"
+version = "0.1.0"
 edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 actix = "0.12"
