--- a/els/Cargo.toml
+++ b/els/Cargo.toml
@@ -21,6 +21,7 @@ envy = "0.4"
 futures = "0.3"
 lazy_static = "1"
 log = "0.4"
+meilisearch-sdk = "0.13"
 oauth2="4"
 rand= "0.8"
 redis = { version = "0.21", features = ["tokio-comp"] }
