--- a/halo/Cargo.toml
+++ b/halo/Cargo.toml
@@ -6,4 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# teloxide = { version = "0.5", features = ["macros", "auto-send"] }
+actix = "0.12"
+actix-cors ="0.6.0-beta.8"
+actix-web = "4.0.0-beta.19"
+actix-web-actors = "4.0.0-beta.10"
+awc = "3.0.0-beta.18"
 meilisearch-sdk = "0.13"
+
+[dev-dependencies]
+actix-test = "0.1.0-beta.11"
