--- a/ptolemaios/Cargo.toml
+++ b/ptolemaios/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-beta.18"
+actix-web = "4.0.0-beta.19"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 validator = { version = "0.14", features = ["derive"] }
+
+[dev-dependencies]
+actix-test = "0.1.0-beta.11"
