--- a/veda/Cargo.toml
+++ b/veda/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 actix = "0.12"
 actix-broker = "0.4.1"
 actix-cors ="0.6.0-beta.8"
-actix-web = "4.0.0-beta.18"
-actix-web-actors = "4.0.0-beta.9"
-awc = "3.0.0-beta.17"
+actix-web = "4.0.0-beta.19"
+actix-web-actors = "4.0.0-beta.10"
+awc = "3.0.0-beta.18"
 
 chrono ={version = "0.4",features = ["serde"]}
 # config and log
@@ -30,3 +30,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 validator = { version = "0.14", features = ["derive"] }
+
+[dev-dependencies]
+actix-test = "0.1.0-beta.11"
