--- a/crates/websocket/Cargo.toml
+++ b/crates/websocket/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "els"
-version = "0.1.0"
+# 高达00里面的veda,我希望后面这个可以做做人工智能
+name = "double-zero-websocket"
+version = "0.1.1"
+authors = ["walker <warriorsfly@gmail.com>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 actix = "0.12"
@@ -30,3 +30,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 validator = { version = "0.14", features = ["derive"] }
+
+[dev-dependencies]
+actix-test = "0.1.0-beta.11"
