--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ edition = "2021"
 members = [
     
     "crates/bors",
+    "crates/database-schema",
     "crates/task",
+    "crates/utils",
     "crates/websocket"
 ]
 
