--- a/crates/websocket/Cargo.toml
+++ b/crates/websocket/Cargo.toml
@@ -1,35 +1,26 @@
 [package]
-# 高达00里面的veda,我希望后面这个可以做做人工智能
 name = "double-zero-websocket"
-version = "0.1.1"
+version = "0.0.1"
 authors = ["walker <warriorsfly@gmail.com>"]
 edition = "2021"
 
 [dependencies]
+double-zero-utils = { version = "0.0.1", path = "../utils" }
 actix = "0.12"
 actix-broker = "0.4.1"
 actix-cors ="0.6.0-beta.8"
 actix-web = "4.0.0-beta.19"
 actix-web-actors = "4.0.0-beta.10"
 awc = "3.0.0-beta.18"
-
+anyhow = "1"
 chrono ={version = "0.4",features = ["serde"]}
-# config and log
-dotenv = "0.15"
-env_logger = "0.9"
-envy = "0.4"
-futures = "0.3"
-lazy_static = "1"
-log = "0.4"
-oauth2="4"
-rand= "0.8"
-redis = { version = "0.21", features = ["tokio-comp"] }
 
+diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
+
+rand = "0.8"
 # for serialize
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
-validator = { version = "0.14", features = ["derive"] }
 
 [dev-dependencies]
 actix-test = "0.1.0-beta.11"
