--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -21,7 +21,7 @@ openssl = "0.10"
 percent-encoding = "2"
 rand = "0.8"
 regex = "1"
-strum = "0.23"
+strum = { version = "0.23", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", features = ["preserve_order"] }
 smart-default = "0.6"
