--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ GRPC_URL=[::1]:50051
 BACKTRACE=1
 LOG=actix_web=info
 SERVER=127.0.0.1:3000
-DATABASE_URL postgres://allen:walker@127.0.0.1/innocence
+DATABASE_URL=postgres://allen:walker@127.0.0.1/double_zero
