--- a/crates/websocket/Cargo.toml
+++ b/crates/websocket/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 double-zero-utils = { version = "0.0.1", path = "../utils" }
 actix = "0.12"
 actix-cors ="0.6.0-beta.8"
-actix-web = "4.0.0-beta.20"
-actix-web-actors = "4.0.0-beta.10"
-awc = "3.0.0-beta.18"
+actix-web = "4.0.0-rc.1"
+actix-web-actors = "4.0.0-beta.11"
+awc = "3.0.0-beta.20"
 anyhow = "1"
 chrono ={version = "0.4",features = ["serde"]}
 
@@ -22,4 +22,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 [dev-dependencies]
-actix-test = "0.1.0-beta.11"
+actix-test = "0.1.0-beta.12"
