--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -6,13 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-beta.21"
+actix-web = "4.0.0-rc.3"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
-comrak = { version = "0.12", default-features = false }
-diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
-encoding = "0.2"
-jsonwebtoken = "7"
+jsonwebtoken = "8"
 futures = "0.3"
 itertools = "0.10"
 lettre = "0.10.0-rc.4"
@@ -21,17 +18,12 @@ openssl = "0.10"
 percent-encoding = "2"
 rand = "0.8"
 regex = "1"
-strum = { version = "0.23", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
-serde_json = { version = "1", features = ["preserve_order"] }
-smart-default = "0.6"
-strum_macros = "0.23"
 thiserror = "1"
 tokio = { version = "1", features = ["sync"] }
 tracing = "0.1"
 tracing-error = "0.2"
 uuid = { version = "0.8", features = ["serde", "v4"] }
-webpage = { version = "1", default-features = false, features = ["serde"] }
 
 
 
