--- a/crates/websocket/Cargo.toml
+++ b/crates/websocket/Cargo.toml
@@ -9,14 +9,15 @@ double-zero-utils = { version = "0.0.1", path = "../utils" }
 actix = "0.12"
 actix-cors ="0.6.0-beta.8"
 actix-web = "4.0.0-rc.3"
-actix-web-actors = "4.0.0-beta.11"
-awc = "3.0.0-beta.20"
+actix-web-actors = "4.0.0-beta.12"
+awc = "3.0.0-beta.21"
 anyhow = "1"
 chrono ={version = "0.4",features = ["serde"]}
 
-diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
+# diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
 
 rand = "0.8"
+redis = { version = "0.21", features = ["cluster","tokio-comp"] }
 # for serialize
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -25,4 +26,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 
 [dev-dependencies]
-actix-test = "0.1.0-beta.12"
+actix-test = "0.1.0-beta.13"
