--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 members = [
     
     "crates/bors",
-    # "crates/schema",
+    "crates/schema",
     "crates/task",
     "crates/utils",
  
@@ -20,7 +20,7 @@ members = [
 [dependencies]
 
 actix = "0.12"
-actix-cors ="0.6.0-beta.8"
+actix-cors ="0.6.0-beta.10"
 actix-web = "4.0.0-rc.3"
 actix-web-actors = "4.0.0-beta.12"
 awc = "3.0.0-beta.21"
