--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,9 +20,9 @@ members = [
 [dependencies]
 
 actix = "0.12"
-actix-cors ="0.6.0-beta.10"
-actix-web = "4.0.0-rc.3"
-actix-web-actors = "4.0.0-beta.12"
+actix-cors ="0.6"
+actix-web = "4"
+actix-web-actors = "4"
 awc = "3.0.0-beta.21"
 
 anyhow = "1"
