--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.0.0-rc.3"
+actix-web = "4"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
 jsonwebtoken = "8"
