--- a/crates/websocket/Cargo.toml
+++ b/crates/websocket/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 [dependencies]
 double-zero-utils = { version = "0.0.1", path = "../utils" }
 actix = "0.12"
-actix-cors ="0.6.0-beta.10"
-actix-web = "4.0.0-rc.3"
-actix-web-actors = "4.0.0-beta.12"
+actix-cors ="0.6"
+actix-web = "4"
+actix-web-actors = "4"
 awc = "3.0.0-beta.21"
 anyhow = "1"
 chrono ={version = "0.4",features = ["serde"]}
