--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,15 +27,13 @@ actix = "0.13"
 actix-cors ="0.6"
 actix-web = "4"
 actix-web-actors = "4"
-awc = "3.0.0-beta.21"
+awc = "3"
 
 anyhow = "1"
 chrono ={version = "0.4",features = ["serde"]}
-dotenv = "0.15"
 env_logger = "0.9"
-envy = "0.4"
+
 futures = "0.3"
-lazy_static = "1"
 log = "0.4"
 # oauth2="4"
 rand= "0.8"
