--- a/crates/bors/Cargo.toml
+++ b/crates/bors/Cargo.toml
@@ -10,7 +10,7 @@ futures = "0.3"
 actix-cors ="0.6"
 actix-web = "4"
 actix-web-actors = "4"
-awc = "3.0.0-beta.21"
+awc = "3"
 pin-project = "1.0.3"
 bytes = "1.0.0"
 url = { version = "2", features = ["serde"] }
