--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -10,8 +10,11 @@ actix-web = "4"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
 jsonwebtoken = "8"
+dotenv = "0.15"
+envy = "0.4"
 futures = "0.3"
 itertools = "0.10"
+lazy_static = "1"
 lettre = "0.10.0-rc.4"
 once_cell = "1"
 openssl = "0.10"
@@ -20,7 +23,6 @@ rand = "0.8"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1"
-tokio = { version = "1", features = ["sync"] }
 tracing = "0.1"
 tracing-error = "0.2"
 uuid = { version = "0.8", features = ["serde", "v4"] }
