--- a/crates/websocket/Cargo.toml
+++ b/crates/websocket/Cargo.toml
@@ -10,7 +10,7 @@ actix = "0.13"
 actix-cors ="0.6"
 actix-web = "4"
 actix-web-actors = "4"
-awc = "3.0.0-beta.21"
+awc = "3"
 anyhow = "1"
 chrono ={version = "0.4",features = ["serde"]}
 
