--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,25 +3,21 @@ name = "double-zero"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 
 [workspace]
 members = [
-    
-    "crates/bors",
+    # "crates/bors",
     "crates/schema",
     "crates/task",
     "crates/utils",
- 
     "crates/websocket"
 ]
 
+
 [dependencies]
-# double-zeroß-bors = { version = "0.1", path = "./crates/bors" }
+# double-zero-bors = { version = "0.1", path = "./crates/bors" }
 double-zero-task = { version = "0.1", path = "./crates/task" }
 double-zero-utils = { version = "0.1", path = "./crates/utils" }
-
 
 actix = "0.13"
 actix-cors ="0.6"
@@ -35,7 +31,6 @@ env_logger = "0.9"
 
 futures = "0.3"
 log = "0.4"
-# oauth2="4"
 rand= "0.8"
 
 thiserror = "1"
@@ -44,6 +39,8 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # meilisearch-sdk = "0.13"
 # elasticsearch = "7.14.0-alpha.1"
 serde = { version = "1", features = ["derive"] }
+
+
 [dev-dependencies]
 actix-test = "0.1.0-beta.13"
 
