--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
 # double-zero-bors = { version = "0.1", path = "./crates/bors" }
 double-zero-task = { version = "0.1", path = "./crates/task" }
 double-zero-utils = { version = "0.1", path = "./crates/utils" }
+double-zero-websocket = { version = "0.1", path = "./crates/websocket" }
 
 actix = "0.13"
 actix-cors ="0.6"
