--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ members = [
     # "crates/bors",
     "crates/schema",
     "crates/todo",
-    "crates/utils",
-    "crates/websocket"
+    "crates/utils"
 ]
 
 
@@ -19,7 +18,6 @@ members = [
 double-zero-schema = { version = "0.1", path = "./crates/schema" }
 double-zero-todo = { version = "0.1", path = "./crates/todo" }
 double-zero-utils = { version = "0.1", path = "./crates/utils" }
-double-zero-websocket = { version = "0.1", path = "./crates/websocket" }
 
 actix = "0.13"
 actix-cors ="0.6"
