--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -9,11 +9,12 @@ edition = "2021"
 actix-web = "4"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
-jsonwebtoken = "8"
+diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
 dotenv = "0.15"
 envy = "0.4"
 futures = "0.3"
 itertools = "0.10"
+jsonwebtoken = "8"
 lazy_static = "1"
 lettre = "0.10.0-rc.4"
 once_cell = "1"
