--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DATABASE_URL=postgres://allen:walker@127.0.0.1/double_zero
 REDIS_URL=redis://127.0.0.1:6379
 SERVER=127.0.0.1:3000
+JWT_KEY = 61400991
+JWT_EXPIRATION = 3600
