--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ members = [
 
 
 [dependencies]
-# double-zero-bors = { version = "0.1", path = "./crates/bors" }
 double-zero-schema = { version = "0.1", path = "./crates/schema" }
 double-zero-todo = { version = "0.1", path = "./crates/todo" }
 double-zero-utils = { version = "0.1", path = "./crates/utils" }
@@ -27,17 +26,18 @@ awc = "3"
 
 anyhow = "1"
 chrono ={version = "0.4",features = ["serde"]}
+diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
 
 futures = "0.3"
 rand= "0.8"
-
+openssl = "0.10"
 thiserror = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 # meilisearch-sdk = "0.13"
 # elasticsearch = "7.14.0-alpha.1"
 serde = { version = "1", features = ["derive"] }
-
+validator = { version = "0.14", features = ["derive"] }
 
 [dev-dependencies]
 actix-test = "0.1.0-beta.13"
