--- a/crates/schema/Cargo.toml
+++ b/crates/schema/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+double-zero-utils = { version = "0.1", path = "../utils" }
+
 actix-web = "4"
 chrono = { version = "0.4", features = ["serde"] }
 diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
