--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
-anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
+data-encoding = "2"
+derive_more = "0.99"
 diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
 dotenv = "0.15"
 envy = "0.4"
@@ -19,14 +20,17 @@ lazy_static = "1"
 lettre = "0.10.0-rc.4"
 once_cell = "1"
 openssl = "0.10"
-percent-encoding = "2"
 rand = "0.8"
 regex = "1"
+ring = "0.17.0-alpha.11"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 thiserror = "1"
 tracing = "0.1"
 tracing-error = "0.2"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+
+validator = { version = "0.14", features = ["derive"] }
 
 
 
